# rbs-cloud

./: .gitignore  README.md  convert_rosbag_to_lerobot.py  pyproject.toml  rbs_cloud.py  requirements.txt
gpu_server/: __init__.py  gpu_server.py
rbs_client/: __init__.py  download_dataset.py  download_from_server.py  file_client.py  get_parquet.py  upload_and_trigger.py  upload_dataset.py  web_client.py  web_utils.py
