[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "rbs-cloud"
version = "0.1.0"
description = "RBS Cloud utilities"
readme = "README.md"
requires-python = ">=3.9"
authors = [{name="RBS"}]
dependencies = [
    "fastapi",
    "uvicorn",
    "duckdb",
    "pandas",
    "pyarrow",
    "python-multipart",
    "requests",
    "streamlit",
]

[tool.setuptools.packages.find]
where = ["."]

